K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sailor
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template: 
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: northamerica-northeast2-docker.pkg.dev/githubauth-495804/mywebrepo/image:updatedtag
        ports:
        - containerPort: 8080
